@@ -139,4 +139,4 @@ map { ok(!is_prime($_), "Large composite $_ is not prime" ) }
      1543267864443420616877677640751301
     /;
 
-is(is_prime('340282366920938463463374607431768211507'), 2, "is_prime(2**128+51) = 2");
+is(is_prime('43556142965880123323311949751266331066401'), 2, "is_prime(2**135+33) = 2");
